        Reviewed by Adele.

http://bugs.webkit.org/show_bug.cgi?id=12807
        XPath incorrectly converts NaN to boolean

        Test: fast/xpath/nan-to-boolean.html

        * xml/XPathValue.cpp:
        (WebCore::XPath::Value::toBoolean): Convert NaN to false.
        * xml/XPathFunctions.cpp:
        (WebCore::XPath::FunSubstringAfter::doEvaluate): Fix substring-after to actually work.



Canonical link: https://commits.webkit.org/16561@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19697 268f45cc-cd09-0410-ab3c-d52691b4dbfc